12/20 컨텐츠 삭제 기능

--- a/src/main/resources/templates/layout/admin/getMovie.html
+++ b/src/main/resources/templates/layout/admin/getMovie.html
@@ -42,7 +42,8 @@
 				</table>
             </div>
             	<a th:href="@{'/updateMovie?movie_code=' + ${movie.movie_code}}">수정하기</a>
-            	<a th:href="@{/deleteMovie}">삭제하기</a>
+            	<a th:href="@{/deleteMovie/{movie_code}(movie_code=${movie.movie_code})}">삭제하기</a>
+				<a th:href="@{/getMovieList}">목록으로</a>
              </div>
           </div>
         </div>
