12/20 TV프로그램, 에피소드 삭제 기능 구현

--- a/src/main/resources/templates/layout/admin/getTVProgramList.html
+++ b/src/main/resources/templates/layout/admin/getTVProgramList.html
@@ -3,6 +3,7 @@
 
 <body>
 <a th:href="@{/insertTVProgram}">TV프로그램 등록하기</a>
+<a th:href="@{/adminPage}">메인화면</a>
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
