--- a/src/main/resources/templates/layout/admin/getMovieList.html
+++ b/src/main/resources/templates/layout/admin/getMovieList.html
@@ -3,6 +3,7 @@
 
 <body>
 <a th:href="@{/insertMovie}">영화 등록하기</a>
+<a th:href="@{/adminPage}">메인화면</a>
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
