--- a/src/main/resources/templates/layout/admin/getMovieList.html
+++ b/src/main/resources/templates/layout/admin/getMovieList.html
@@ -1,42 +1,63 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<!-- header 입니다. -->
+<th:block th:replace="fragments/adminheader :: adminheader"></th:block>
+</head>
+<body class="sb-nav-fixed  th:align="center"">
 
-<body>
-<a th:href="@{/insertMovie}">영화 등록하기</a>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="page-content">
+	<div id="layoutSidenav">
+		<!-- mid 입니다. -->
+		<th:block th:replace="fragments/adminmid :: adminmid"></th:block>
+		<!--  <div id="layoutSidenav">와 중간은 꼭 넣어주어야 함.-->
+		<div id="layoutSidenav_content">
+			<main>
+			<!-- 여기까지는 꼭 넣어주기(어드민) 아래 footer도 있음 -->
 			
-		<div class="main-title">
-		  <h1>영화</h1>
-		</div>
-
-	<!-- 영화 전체 목록 -->
-	<div class="row">
-	  <div class="col-lg-12">
-		<div class="featured-contents header-text">
-		  <div class="heading-section">
-			<h3>영화 목록</h3>
-		  </div>
-
-		  <div class="owl-features owl-carousel">
-			<div th:each="movie, state : ${movieList}" class="item">
-			  <div class="thumb">
-				<img th:src="@{'/assets/images/movie/' + ${movie.image_path}}" alt="">
-				  <a th:href="@{getMovie(movie_code=${movie.movie_code})}">
-					<div class="hover-effect">
-					  <h6>상세보기</h6>
-					</div>
-				  </a>
+				<div class="container-fluid px-4">
+					<h1 class="mt-4">용용플레이</h1>
+					<ol class="breadcrumb mb-4">
+						<li class="breadcrumb-item active"><a th:href="@{/insertMovie}">영화 등록하기</a></li>
+					</ol>
+					
+					<div class="card mb-4">
+						<div class="card-header">
+							<i class="fas fa-table me-1"></i> 영화
+						</div>
+						<div class="card-body">
+							<table id="movieTable">
+								<thead>
+									<tr>
+										<th>코드</th>
+										<th>이미지</th>
+										<th>제목</th>
+										<th>장르</th>
+										<th>출연진</th>
+										<th>관람등급</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr th:each="movie, state : ${movieList}">
+										<td><a th:href="@{getMovie(movie_code=${movie.movie_code})}" th:text="${movie.movie_code}"></a></td>
+										<td><a th:href="@{getMovie(movie_code=${movie.movie_code})}"><img th:src="@{'/assets/images/movie/' + ${movie.image_path}}" >
+											 </a>
+												</td>
+										<td><a th:href="@{getMovie(movie_code=${movie.movie_code})}" th:text="${movie.m_title_ko}"></a></td>
+										<td><a th:href="@{getMovie(movie_code=${movie.movie_code})}" th:text="${movie.genre}"></a></td>
+										<td><a th:href="@{getMovie(movie_code=${movie.movie_code})}" th:text="${movie.cast}"></a></td>
+										<td><a th:href="@{getMovie(movie_code=${movie.movie_code})}" th:text="${movie.rating}"></a></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>				
+				
 				</div>
-			  <h4>[[${movie.m_title_ko}]]</h4>
-			</div>
-		  </div>
+			</main>
 		</div>
-	  </div>
-	  
-	
+	</div>
+	<!-- footer 입니다. -->
+	<th:block th:replace="fragments/adminfooter :: adminfooter"></th:block>
 </body>
 
 </html>
