--- a/src/main/resources/templates/fragments/adminfooter.html
+++ b/src/main/resources/templates/fragments/adminfooter.html
@@ -2,12 +2,12 @@
 <html>
 <head xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>어드민</title>
 </head>
 <body>
 <th:block th:fragment="adminfooter">
 <footer class="py-4 bg-light mt-auto">
-                    <div class="container-fluid px-4">
+                    <div class="container-fluid px-4"><br><br>
                         <div class="d-flex align-items-center justify-content-between small">
                             <div class="text-muted">Copyright© 용용플레이(주) All rights reserved.</div>
                             <div>
