--- a/src/main/resources/templates/layout/admin/insertMovie.html
+++ b/src/main/resources/templates/layout/admin/insertMovie.html
@@ -27,14 +27,15 @@
 
 							<form th:action="@{/insertMovie}" method="post" id="insert"
 								enctype="multipart/form-data">
-								<table class="insertMovie" th:align="center" th:cellpadding="0"
-									th:cellspacing="0">
+								<table class="insertMovie">
 									<tr>
 										<td>카테고리</td>
 										<td>
 											<!-- 고정된 카테고리 값을 여기에 입력 -->
 											<input type="text" name="category" id="category" value="영화" readonly>
 										</td>
+											<tr>
+											</tr>
 
 										<td>일련번호</td>
 										<td><input type="text" name="movie_code" id="movie_code"
@@ -44,6 +45,8 @@
 										<td>장르</td>
 										<td><input type="text" name="genre" id="genre"
 											placeholder="장르를 입력해주세요."></td>
+											<tr>
+											</tr>
 
 										<td>제목</td>
 										<td><input type="text" name="m_title_ko" id="m_title_ko"
@@ -53,6 +56,8 @@
 										<td>감독</td>
 										<td><input type="text" name="director" id="director"
 											placeholder="감독을 입력해주세요."> </textarea></td>
+											<tr>
+											</tr>
 
 										<td>국가</td>
 										<td><input type="text" name="nation" id="nation"
@@ -62,6 +67,8 @@
 										<td>개봉년도</td>
 										<td><input type="text" name="open_year" id="open_year"
 											placeholder="개봉년도를 입력해주세요."> </textarea></td>
+											<tr>
+											</tr>
 
 										<td>상영시간</td>
 										<td><input type="text" name="running_time"
@@ -71,6 +78,8 @@
 										<td>등급</td>
 										<td><input type="text" name="rating" id="rating"
 											placeholder="등급을 입력해주세요."> </textarea></td>
+											<tr>
+											</tr>
 
 										<td>키워드</td>
 										<td><input type="text" name="keyword" id="keyword"
@@ -79,7 +88,9 @@
 									<tr>
 										<td>출연진</td>
 										<td><textarea name="cast" id="cast" cols="50"
-												rows="10" placeholder="출연진을 입력해주세요."></textarea></td>
+												rows="3" placeholder="출연진을 입력해주세요."></textarea></td>
+												<tr>
+											</tr>
 
 										<td>줄거리</td>
 										<td><textarea name="description" id="description"
