--- a/src/main/resources/templates/layout/member/change.html
+++ b/src/main/resources/templates/layout/member/change.html
@@ -26,49 +26,49 @@
                                  <tr>
                                     <th></th>
                                     <th>
-                                    <button  class="change-use-button" type="button"onclick="setMembership('GUEST')">GUEST</button>
+                                    <button  class="change-use-button" type="button" id="guest-btn" onclick="setMembership('GUEST')">GUEST</button>
                                     </th>
                                     <th>
-                                    <button class="change-use-button" type="button" onclick="setMembership('BASIC')">BASIC</button>
+                                    <button class="change-use-button" type="button" id="basic-btn" onclick="setMembership('BASIC')">BASIC</button>
                                     </th>
                                     <th>
-                                    <button class="change-use-button" type="button" onclick="setMembership('PREMIUM')">PREMIUM</button>
+                                    <button class="change-use-button" type="button" id="premium-btn" onclick="setMembership('PREMIUM')">PREMIUM</button>
                                     </th>
                                  </tr>
-                                 <tr>
+                                 <tr class="content">
                                     <td>월간 이용 금액</td>
-                                    <td>0원</td>
-                                    <td>9,500원</td>
-                                    <td>13,500원</td>
+                                    <td class="guest">0원</td>
+                                    <td class="basic">9,500원</td>
+                                    <td class="premium">13,500원</td>
                                  </tr>
-                                 <tr>
+                                 <tr class="content">
                                     <td>이용기간</td>
-                                    <td>가입 후 7일</td>
-                                    <td>한달</td>
-                                    <td>한달</td>
+                                    <td class="guest">가입 후 7일</td>
+                                    <td class="basic">한달</td>
+                                    <td class="premium">한달</td>
                                  </tr>
-                                 <tr>
+                                 <tr class="content">
                                     <td>모바일+태블릿+PC+TV</td>
-                                    <td>○</td>
-                                    <td>○</td>
-                                    <td>○</td>
+                                    <td class="guest">○</td>
+                                    <td class="basic">○</td>
+                                    <td class="premium">○</td>
                                  </tr>
-                                 <tr>
+                                 <tr class="content">
                                     <td>VOD 30만편 이상</td>
-                                    <td>○</td>
-                                    <td>○</td>
-                                    <td>○</td>
+                                    <td class="guest">○</td>
+                                    <td class="basic">○</td>
+                                    <td class="premium">○</td>
                                  </tr>
-                                 <tr>
+                                 <tr class="content">
                                     <td>영화 6천편 무제한 시청</td>
-                                    <td>X</td>
-                                    <td>X</td>
-                                    <td>○</td>
+                                    <td class="guest">X</td>
+                                    <td class="basic">X</td>
+                                    <td class="premium">○</td>
                                  </tr>
                               </table>
                            </div>
-                           <div>
                            <br>
+                           <div>
                            <!-- 로그인 되었을때만 보이게 이용권 변경 가능-->
                               <div th:if="${session.member != null}">                                         
                                  <div class="input_block">
@@ -95,10 +95,7 @@
                                     <h5>이용권 종료일</h5>
                                     <input type="date" name="end_date"  id="end_date" th:value="${#dates.format(session.member.end_date, 'yyyy-MM-dd')}" readonly>
                                  </div>
-                                 <div class="input_block">
-                                    <h5>이용권 종료일</h5>
-                                    <input type="date" name="end_date" id="end_date" th:value="${#dates.format(session.member.end_date, 'yyyy-MM-dd')}" readonly>
-                                 </div><br>
+                                 <br>
                                  <div class="link-block">
                               <a th:href="@{/main}">메인으로</a> &nbsp;
                               </div>
