12/21 헤더 관리자

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -51,9 +51,9 @@ https://templatemo.com/tm-579-cyborg-gaming
 						<li ><a href="change">이용권안내</a></li>
 					</ul>
 					<ul class="upper-nav" th:unless="${session.member == null}">
-						<li th:if="${session.member.position == 'ADMIN'}"><a href="admin">관리자 페이지 이동</a></li>
+						<li th:if="${session.member.position == 'ADMIN'}"><a href="adminPage">관리자 페이지 이동</a></li>
 						<li><a href="logout">로그아웃</a></li>
-						<li><a href="change">이용권변경</a></li>
+						<li th:unless="${session.member.position == 'ADMIN'}"><a href="change">이용권변경</a></li>
 					</ul>
 					<hr>
 				</div>
